.k8s/overlays/hmg/memory_count.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-dev-extreme-archetype
spec: 
  template:
    spec:
      containers:
      - name: lab-dev-extreme-archetype
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 128Mi

...
