.k8s/overlays/hmg/replica_count.yml
---

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: lab-dev-extreme-archetype
spec:
  replicas: 1

...
